Fix div alignment

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ html {
   box-sizing: inherit;
 }
 
+div {
+  text-align: center;
+}
+
 .btn {
   text-decoration: none;
   background-color: #333;
@@ -14,7 +18,6 @@ html {
   display: inline-block;
   vertical-align: middle;
   text-align: center;
-  text-decoration: none;
   padding: .4em .75em .3em;
   border-radius: 8px;
   border-width: 3px;
@@ -28,7 +31,6 @@ html {
 .btn-subtle {
   color: #fff;
   background-color: #ccc;
-  font-size: inherit
 }
 
 .btn-subtle:hover {
@@ -58,10 +60,8 @@ html {
 
 .btn-big {
   font-size: 1.5rem;
-  text-decoration: none;
 }
 
 .btn-small {
   font-size: .875rem;
-  text-decoration: none;
 }
